--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -636,3 +636,28 @@ pre tt:after {
 #calendar td.is-disabled {
   color: #ccc;
 }
+
+#calendar td.fixedCol {
+  position: sticky;
+  left: 0;
+  color: #fff;
+  background: #3f51b5;
+}
+
+#calendar td.fixedCol::before {
+  content: "";
+  position: absolute;
+  top: -1px;
+  left: -1px;
+  width: 100%;
+  height: 100%;
+  border: 1px solid #ccc;
+}
+
+#calendar .week {
+  background: #f2f2f2;
+}
+
+a {
+  text-decoration: none;
+}
